+++ This bug was initially created as a clone of Bug #134423 +++ This is an excerpt of a bigger presentation; it still exhibits the reported issue for me. How to reproduce: 1. Open presentation 2. Invoke presentation mode 3. Observe how slides are shown as black only. Version: 7.0.0.0.beta2+ Build ID: 77e4943cc6cf206a45901e5c87fabf0f783c8262 CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3 Locale: en-US (en_US.UTF-8); UI: en-US TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-0, Time: 2020-06-24_02:22:53 Calc: threaded Also seen with a recent 7.1 alpha. According to Buovjaga in the original report, "slideshow blackness [is] already in oldest of 6.3 repo".
Miklos Vajna committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/78036f74fa74ee2552e79064660634e1342692ff tdf#135094 cairo canvas: fix black slide containing a very small image It will be available in 7.1.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
I think this is now fixed on master.
Yes, I am happy to confirm that both my reduced testcase and the original presentation do not exhibit this issue ("black slides") any longer. Thank you, Miklos! I also updated bug #134423 with your findings on the 0cm x 0cm image, since the blank slide preview is a regression bi-sected to a patch by Armin; maybe you can give him a hint (on that other issue)?
Yes, probably the small image will be causing the problem over there as well. I have nothing to add there right now. :-)
Miklos Vajna committed a patch related to this issue. It has been pushed to "libreoffice-7-0": https://git.libreoffice.org/core/commit/00665f8d986644b40c1075c599515d20c8a6bbb4 tdf#135094 cairo canvas: fix black slide containing a very small image It will be available in 7.0.2. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
*** Bug 127790 has been marked as a duplicate of this bug. ***